--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
     ></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="homepage-top">
+      <p class="intro">I am</p>
+      <h1>Margareta Krajnikovics</h1>
+      <h2>Front-end developer, based in London</h2>
+      <div>
+        <a href="#" class="btn btn-branding" title="Let's start">Let's start</a>
+      </div>
+    </div>
+  </body>
 </html>
