added flower and lines

--- a/index.html
+++ b/index.html
@@ -32,9 +32,21 @@
     <div class="homepage-top">
       <p class="intro">I am</p>
       <h1>Margareta Krajnikovics</h1>
-      <h2>Front-end developer, based in London</h2>
+
+      <h2>
+        <img src="images/line 4.png" class="line-right" alt="line" />Front-end
+        developer, based in London
+        <img src="images/line 4.png" class="line-left" alt="line" />
+      </h2>
       <div>
         <a href="#" class="btn btn-branding" title="Let's start">Let's start</a>
+      </div>
+      <div>
+        <img
+          src="images/flower.png"
+          class="background-img-bottom img-fluid"
+          alt="flower"
+        />
       </div>
     </div>
   </body>
