added skills items and certificates

--- a/index.html
+++ b/index.html
@@ -34,19 +34,102 @@
       <h1>Margareta Krajnikovics</h1>
 
       <h2>
-        <img src="images/line 4.png" class="line-right" alt="line" />Front-end
-        developer, based in London
-        <img src="images/line 4.png" class="line-left" alt="line" />
+        <img src="images/line3.png" class="line-right" alt="line" />
+        <span class="opacity-75">Front-end developer, based in London</span>
+        <img src="images/line3.png" class="line-left" alt="line" />
       </h2>
       <div>
         <a href="#" class="btn btn-branding" title="Let's start">Let's start</a>
       </div>
-      <div>
-        <img
-          src="images/flower.png"
-          class="background-img-bottom img-fluid"
-          alt="flower"
-        />
+    </div>
+    <div class="skills-page">
+      <h2 class="text-center my-skills">My skills</h2>
+      <ul class="ul-skills1">
+        <li class="list-inline-item">
+          <img src="images/html.png" title="html" alt="html logo" />
+          <div>HTML</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/css.png" title="css" alt="css logo" />
+          <div>CSS</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/java.png" title="java script" alt="java logo" />
+          <div>Java Script</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/figma.png" title="figma" alt="figma logo" />
+          <div>Figma</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/vs.png" title="vs" alt="editor logo" />
+          <div>Editor</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/git.png" title="github" alt="git logo" />
+          <div>GitHub</div>
+        </li>
+      </ul>
+      <ul class="ul-list2">
+        <li class="list-inline-item">
+          <img
+            src="images/bootstrap.png"
+            title="bootstrap"
+            alt="bootstrap logo"
+          />
+          <div>Bootstrap</div>
+        </li>
+        <li class="list-inline-item">
+          <img src="images/netlify.png" title="netlify" alt="netlify logo" />
+          <div>Hosting</div>
+        </li>
+        <li class="list-inline-item">
+          <img
+            src="images/responsive.png"
+            title="responsive"
+            alt="responsive logo"
+          />
+          <div>Responsive</div>
+        </li>
+        <li class="list-inline-item">
+          <img
+            src="images/photoshop.png"
+            title="photoshop"
+            alt="photoshop logo"
+          />
+          <div>Photoshop</div>
+        </li>
+      </ul>
+      <div class="certificates">
+        <h2 class="text-center certificates">My Certificates</h2>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col d-none d-lg-block">
+            <img
+              src="images/intro-to-code.png"
+              class="img-fluid"
+              title="Introduction to coding"
+              alt="Introduction to coding certificate"
+            />
+          </div>
+          <div class="col d-none d-lg-block">
+            <img
+              src="images/front-end.png"
+              class="img-fluid"
+              title="Front-end developer"
+              alt="Front-end developer certificate"
+            />
+          </div>
+          <div class="col d-none d-lg-block">
+            <img
+              src="#"
+              class="img-fluid shadow"
+              title="Front-end developer"
+              alt="Front-end developer certificate"
+            />
+          </div>
+        </div>
       </div>
     </div>
   </body>
