--- a/index.html
+++ b/index.html
@@ -106,6 +106,16 @@
       <div class="container">
         <div class="row">
           <div class="col d-none d-lg-block">
+            <div class="nioly-pic">
+              <img
+                src="images/nioly.png"
+                class="img-fluid shadow"
+                title="Front-end developer"
+                alt="Front-end developer certificate"
+              />
+            </div>
+          </div>
+          <div class="col d-none d-lg-block">
             <img
               src="images/intro-to-code.png"
               class="img-fluid"
@@ -117,14 +127,6 @@
             <img
               src="images/front-end.png"
               class="img-fluid"
-              title="Front-end developer"
-              alt="Front-end developer certificate"
-            />
-          </div>
-          <div class="col d-none d-lg-block">
-            <img
-              src="#"
-              class="img-fluid shadow"
               title="Front-end developer"
               alt="Front-end developer certificate"
             />
