--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div>GitHub</div>
         </li>
       </ul>
-      <ul class="ul-list2">
+      <ul class="ul-skills2">
         <li class="list-inline-item">
           <img
             src="images/bootstrap.png"
@@ -103,9 +103,9 @@
       <div class="certificates">
         <h2 class="text-center certificates">My Certificates</h2>
       </div>
-      <div class="container">
+      <div class="container certificate-container">
         <div class="row">
-          <div class="col d-none d-lg-block">
+          <div class="col-md-4 img-1">
             <div class="nioly-pic">
               <img
                 src="images/nioly.png"
@@ -115,18 +115,20 @@
               />
             </div>
           </div>
-          <div class="col d-none d-lg-block">
+
+          <div class="col-md-4 img-2">
             <img
               src="images/intro-to-code.png"
-              class="img-fluid"
+              class="img-fluid shadow"
               title="Introduction to coding"
               alt="Introduction to coding certificate"
             />
           </div>
-          <div class="col d-none d-lg-block">
+
+          <div class="col-md-4 img-3">
             <img
               src="images/front-end.png"
-              class="img-fluid"
+              class="img-fluid shadow"
               title="Front-end developer"
               alt="Front-end developer certificate"
             />
