--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
               <img
                 src="images/nioly.png"
                 class="img-fluid shadow"
-                title="Front-end developer"
-                alt="Front-end developer certificate"
+                title="Design course"
+                alt="Design course"
               />
             </div>
           </div>
