added about me page

--- a/about.html
+++ b/about.html
@@ -29,43 +29,111 @@
     <a href="/about.html"></a>
     <title>Document</title>
   </head>
-  <body class="about-me-homepage">
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <body>
+    <div class="about-me-homepage">
+      <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
-              >Home</a
-            >
-            <a class="nav-link" href="about.html" target="_blank">About me</a>
-            <a class="nav-link" href="my-projects.html" target="_blank"
-              >My projects</a
-            >
-            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+              <a class="nav-link" href="about.html" target="_blank">About me</a>
+              <a class="nav-link" href="my-projects.html" target="_blank"
+                >My projects</a
+              >
+              <a class="nav-link" href="contact.html" target="_blank"
+                >Contact</a
+              >
+            </div>
           </div>
         </div>
+      </nav>
+      <div class="about-me">
+        <h1>
+          <img src="images/line3.png" class="line-right" alt="line" />
+          <span>About me</span>
+          <img src="images/line3.png" class="line-left" alt="line" />
+        </h1>
+        <div class="about-me-content container">
+          <div class="row">
+            <div class="col-md-6">
+              <h2 class="mb-4">Hi, I am Margareta Krajnikovics</h2>
+              <h3>Front-end developer from Ukraine, based in London</h3>
+            </div>
+            <div class="col-md-6">
+              <p>
+                I had this great opportunity to learn coding from scratch with
+                SheCodes. Thanks to amazing study material and challenges
+                provided by this great team I fell in love with the idea of
+                working as a front-end developer. You can find my first steps in
+                coding by clicking on the button below. Please do contact me if
+                you have any questions at all.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <a
+            href="#skills-contact"
+            class="btn btn-branding about-me-button"
+            title="View all projects"
+            >View all projects</a
+          >
+        </div>
       </div>
-    </nav>
-    <h1 class="about-me">About me</h1>
-    <h2>
-      <img src="images/line3.png" class="line-right" alt="line" />
-      <span class="opacity-75"
-        >Front-end developer from Ukraine, based in London</span
-      >
-      <img src="images/line3.png" class="line-left" alt="line" />
-    </h2>
+    </div>
+    <div class="about-me-contact">
+      <h2>Contact me</h2>
+      <h3>
+        <a
+          href="mailto:margareta.krajnikovics@gmail.com"
+          class="about-me-contact-email"
+        >
+          margareta.krajnikovics@gmail.com</a
+        >
+      </h3>
+      <div>
+        <a
+          href="#skills-contact"
+          class="btn btn-branding about-me-contact-button"
+          title="Contact me"
+          >Contact me</a
+        >
+      </div>
+      <footer>
+        <img
+          src="images/facebook-icon.png"
+          class="facebook-icon"
+          title="facebook icon"
+          alt="facebook icon"
+        />
+        <img
+          src="images/instagram-icon.png"
+          class="instagram-icon"
+          title="instagram icon"
+          alt="instagram icon"
+        />
+        <img
+          src="images/email-icon.png"
+          class="email-icon"
+          title="email icon"
+          alt="email icon"
+        />
+      </footer>
+    </div>
   </body>
 </html>
