--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Margareta Krajnikovics - Portfolio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light fixed-top">
