organised css and added my projects page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="about-me-homepage">
+    <div class="about-me-content">
       <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
@@ -62,7 +62,7 @@
           </div>
         </div>
       </nav>
-      <div class="about-me">
+      <div>
         <h1>
           <img src="images/line3.png" class="line-right" alt="line" />
           <span>About me</span>
