--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         </div>
       </div>
     </nav>
-    <div class="homepage-top">
-      <p class="intro">I am</p>
+    <div class="homepage-content">
+      <p>I am</p>
       <h1>Margareta Krajnikovics</h1>
 
-      <h2 class="main-h2">
+      <h2>
         <img src="images/line3.png" class="line-right" alt="line" />
         <span class="opacity-75">Front-end developer, based in London</span>
         <img src="images/line3.png" class="line-left" alt="line" />
@@ -74,9 +74,9 @@
         >
       </div>
     </div>
-    <div class="skills-page" id="skills-contact">
-      <h2 class="text-center my-skills">My skills</h2>
-      <ul class="ul-skills1">
+    <div class="skills-page-content" id="skills-contact">
+      <h2 class="text-center">My skills</h2>
+      <ul class="text-center">
         <li class="list-inline-item">
           <img src="images/html.png" title="html" alt="html logo" />
           <div>HTML</div>
@@ -102,7 +102,7 @@
           <div>GitHub</div>
         </li>
       </ul>
-      <ul class="ul-skills2">
+      <ul class="text-center">
         <li class="list-inline-item">
           <img
             src="images/bootstrap.png"
@@ -132,10 +132,10 @@
           <div>Photoshop</div>
         </li>
       </ul>
-      <div class="certificates">
-        <h2 class="text-center certificates">My Certificates</h2>
+      <div class="certificates-page-content">
+        <h2 class="text-center">My Certificates</h2>
       </div>
-      <div class="container certificate-container">
+      <div class="container">
         <div class="row">
           <div class="col-md-4 img-1">
             <div class="nioly-pic">
@@ -168,10 +168,9 @@
         </div>
       </div>
 
-      <div class="go-to-portfolio-mainpage">
-        <h2 class="go-to-portfolio-mainpage-h2">Go to my portfolio</h2>
-        <h3 class="go-to-portfolio-mainpage-h3">to check out my projects</h3>
-
+      <div class="go-to-portfolio-homepage">
+        <h2>Go to my portfolio</h2>
+        <h3>to check out my projects</h3>
         <a
           href="#"
           class="btn btn-branding go-to-portfolio-homepage-button"
