--- a/my-projects.html
+++ b/my-projects.html
@@ -62,7 +62,33 @@
           </div>
         </div>
       </nav>
-      <h1>My projects</h1>
+      <div my-projects-content>
+        <h1 class="text-center mb-5">
+          <img src="images/line3.png" class="line-right" alt="line" />
+          <span>My Projects</span>
+          <img src="images/line3.png" class="line-left" alt="line" />
+        </h1>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 tilda-project-content">
+              <h2 class="mb-5">
+                Tilda Project
+                <img src="images/line3.png" class="line-left" alt="line" />
+                <img src="images/line3.png" class="line-left" alt="line" />
+              </h2>
+              <h3>Designed using Figma and built using Tilda</h3>
+            </div>
+            <div class="col-md-6">
+              <img
+                src="images/nioly-site.png"
+                title="website made in Tilda"
+                class="img-fluid text-center nioly-site-img"
+                alt="nioly site built in Tilda"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
