added project details to my projects page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     ></script>
     <link rel="stylesheet" href="/styles/style.css" />
     <a href="/about.html"></a>
-    <title>Document</title>
+    <title>About Margareta Krajnikovics</title>
   </head>
   <body>
     <div class="about-me-content">
