--- a/my-projects.html
+++ b/my-projects.html
@@ -68,27 +68,140 @@
           <span>My Projects</span>
           <img src="images/line3.png" class="line-left" alt="line" />
         </h1>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 tilda-project-content">
-              <h2 class="mb-5">
-                Tilda Project
-                <img src="images/line3.png" class="line-left" alt="line" />
-                <img src="images/line3.png" class="line-left" alt="line" />
-              </h2>
-              <h3>Designed using Figma and built using Tilda</h3>
+        <div class="my-project-container-content text-center">
+          <div class="container my-projects-container">
+            <div class="row">
+              <div class="col-md-6 project-content">
+                <h2 class="mb-4 text-center">
+                  Tilda Website Project
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                </h2>
+                <h3 class="text-center">
+                  Designed using Figma and built using Tilda
+                </h3>
+                <a
+                  href="#"
+                  class="btn btn-branding my-project-main-button"
+                  title="my projects"
+                  >View project details</a
+                >
+              </div>
+              <div class="col-md-6">
+                <img
+                  src="images/nioly-site.png"
+                  title="website made in Tilda"
+                  class="img-fluid project-imgs"
+                  alt="nioly site built in Tilda"
+                />
+              </div>
             </div>
-            <div class="col-md-6">
-              <img
-                src="images/nioly-site.png"
-                title="website made in Tilda"
-                class="img-fluid text-center nioly-site-img"
-                alt="nioly site built in Tilda"
-              />
+          </div>
+          <div class="container my-projects-container">
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="images/book-club.png"
+                  title="book club website"
+                  class="img-fluid project-imgs"
+                  alt="book club website"
+                />
+              </div>
+              <div class="col-md-6 project-content">
+                <h2 class="mb-4 text-center">
+                  Book Club Project
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                </h2>
+                <h3 class="text-center">
+                  Build using HTML, CSS and JavaScript
+                </h3>
+                <a
+                  href="#"
+                  class="btn btn-branding my-project-main-button"
+                  title="my projects"
+                  >View project details</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="container my-projects-container">
+            <div class="row">
+              <div class="col-md-6 project-content">
+                <h2 class="mb-4 text-center">
+                  Weather App Project
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                </h2>
+                <h3 class="text-center">
+                  Build using HTML, CSS and JavaScript
+                </h3>
+                <a
+                  href="#"
+                  class="btn btn-branding my-project-main-button"
+                  title="my projects"
+                  >View project details</a
+                >
+              </div>
+              <div class="col-md-6">
+                <img
+                  src="images/weather-app.png"
+                  title="weather app project"
+                  class="img-fluid project-imgs"
+                  alt="weather app project"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="container my-projects-container">
+            <div class="row">
+              <div class="col-md-6">
+                <img
+                  src="images/in-progress.png"
+                  title="in progress"
+                  class="img-fluid project-imgs"
+                  alt="in progress"
+                />
+              </div>
+              <div class="col-md-6 project-content">
+                <h2 class="mb-4 text-center">
+                  Dictionary Project
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                  <img src="images/line3.png" class="line-left" alt="line" />
+                </h2>
+                <h3 class="text-center">In progress...</h3>
+                <a
+                  href="#"
+                  class="btn btn-branding my-project-main-button"
+                  title="my projects"
+                  >In progress...</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
+
+      <footer>
+        <img
+          src="images/facebook-icon.png"
+          class="facebook-icon"
+          title="facebook icon"
+          alt="facebook icon"
+        />
+        <img
+          src="images/instagram-icon.png"
+          class="instagram-icon"
+          title="instagram icon"
+          alt="instagram icon"
+        />
+        <img
+          src="images/email-icon.png"
+          class="email-icon"
+          title="email icon"
+          alt="email icon"
+        />
+      </footer>
     </div>
   </body>
 </html>
