added contact page and footer

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="contact-homapage">
+    <div class="contact-me-main-page">
       <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
@@ -62,7 +62,57 @@
           </div>
         </div>
       </nav>
-      <h1>Let's get in touch</h1>
+
+      <div>
+        <h1 class="mb-5">
+          <img src="images/line3.png" class="line-right" alt="line" />
+          <span>Contact me</span>
+          <img src="images/line3.png" class="line-left" alt="line" />
+        </h1>
+        <h3>
+          <a
+            href="mailto:margareta.krajnikovics@gmail.com"
+            class="about-me-contact-email"
+          >
+            margareta.krajnikovics@gmail.com</a
+          >
+        </h3>
+
+        <footer>
+          <a href="https://www.facebook.com/rita.krainicovich/" target="_blank">
+            <img
+              src="images/facebook-icon.png"
+              class="icons"
+              title="facebook icon"
+              alt="facebook icon"
+            />
+          </a>
+          <a href="https://www.instagram.com/rita__25/" target="_blank">
+            <img
+              src="images/instagram-icon.png"
+              class="icons"
+              title="instagram icon"
+              alt="instagram icon"
+            />
+          </a>
+          <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+            <img
+              src="images/email-icon.png"
+              class="icons"
+              title="email icon"
+              alt="email icon"
+            />
+          </a>
+          <a href="https://www.behance.net/mkrajnikovics" target="_blank">
+            <img
+              src="images/behance.png"
+              class="icons"
+              title="behance icon"
+              alt="behance icon"
+            />
+          </a>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
