--- a/my-projects.html
+++ b/my-projects.html
@@ -183,24 +183,38 @@
       </div>
 
       <footer>
-        <img
-          src="images/facebook-icon.png"
-          class="facebook-icon"
-          title="facebook icon"
-          alt="facebook icon"
-        />
-        <img
-          src="images/instagram-icon.png"
-          class="instagram-icon"
-          title="instagram icon"
-          alt="instagram icon"
-        />
-        <img
-          src="images/email-icon.png"
-          class="email-icon"
-          title="email icon"
-          alt="email icon"
-        />
+        <a href="https://www.facebook.com/rita.krainicovich/" target="_blank">
+          <img
+            src="images/facebook-icon.png"
+            class="icons"
+            title="facebook icon"
+            alt="facebook icon"
+          />
+        </a>
+        <a href="https://www.instagram.com/rita__25/" target="_blank">
+          <img
+            src="images/instagram-icon.png"
+            class="icons"
+            title="instagram icon"
+            alt="instagram icon"
+          />
+        </a>
+        <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+          <img
+            src="images/email-icon.png"
+            class="icons"
+            title="email icon"
+            alt="email icon"
+          />
+        </a>
+        <a href="https://www.behance.net/mkrajnikovics" target="_blank">
+          <img
+            src="images/behance.png"
+            class="icons"
+            title="behance icon"
+            alt="behance icon"
+          />
+        </a>
       </footer>
     </div>
   </body>
