added font awesome icons

--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,7 @@
           <img src="images/line3.png" class="line-left" alt="line" />
         </h1>
         <h3>
-          <a
-            href="mailto:margareta.krajnikovics@gmail.com"
-            class="about-me-contact-email"
-          >
+          <a href="mailto:margareta.krajnikovics@gmail.com">
             margareta.krajnikovics@gmail.com</a
           >
         </h3>
