--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </div>
     </nav>
-    <div class="homepage-content">
+    <div class="homepage-content text-center">
       <p>I am</p>
       <h1>Margareta Krajnikovics</h1>
 
@@ -75,7 +75,7 @@
       </div>
     </div>
     <div class="skills-page-content" id="skills-contact">
-      <h2 class="text-center">My skills</h2>
+      <h2 class="text-center mb-5">My skills</h2>
       <ul class="text-center">
         <li class="list-inline-item">
           <img src="images/html.png" title="html" alt="html logo" />
@@ -168,50 +168,38 @@
         </div>
       </div>
 
-      <div class="go-to-portfolio-homepage">
-        <h2>Go to my portfolio</h2>
-        <h3>to check out my projects</h3>
-        <a
-          href="#"
-          class="btn btn-branding go-to-portfolio-homepage-button"
-          title="my projects"
-          >My projects</a
-        >
-      </div>
-
       <footer>
-        <a href="https://www.facebook.com/rita.krainicovich/" target="_blank">
-          <img
-            src="images/facebook-icon.png"
-            class="icons"
-            title="facebook icon"
-            alt="facebook icon"
-          />
-        </a>
-        <a href="https://www.instagram.com/rita__25/" target="_blank">
-          <img
-            src="images/instagram-icon.png"
-            class="icons"
-            title="instagram icon"
-            alt="instagram icon"
-          />
-        </a>
-        <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
-          <img
-            src="images/email-icon.png"
-            class="icons"
-            title="email icon"
-            alt="email icon"
-          />
-        </a>
-        <a href="https://www.behance.net/mkrajnikovics" target="_blank">
-          <img
-            src="images/behance.png"
-            class="icons"
-            title="behance icon"
-            alt="behance icon"
-          />
-        </a>
+        <div class="contact-box d-flex justify-content-between">
+          <div>
+            <h2>Go to my portfolio</h2>
+            <h3 class="text-muted">to check out my projects</h3>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-branding go-to-portfolio-homepage-button"
+              title="my projects"
+              >My projects</a
+            >
+          </div>
+        </div>
+        <div>
+          <div class="icons">
+            <a href="https://www.instagram.com/rita__25/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+          <div class="icons">
+            <a href="https://github.com/Ritulja" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </div>
+          <div class="icons">
+            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
