added footer to all pages

--- a/my-projects.html
+++ b/my-projects.html
@@ -183,38 +183,35 @@
       </div>
 
       <footer>
-        <a href="https://www.facebook.com/rita.krainicovich/" target="_blank">
-          <img
-            src="images/facebook-icon.png"
-            class="icons"
-            title="facebook icon"
-            alt="facebook icon"
-          />
-        </a>
-        <a href="https://www.instagram.com/rita__25/" target="_blank">
-          <img
-            src="images/instagram-icon.png"
-            class="icons"
-            title="instagram icon"
-            alt="instagram icon"
-          />
-        </a>
-        <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
-          <img
-            src="images/email-icon.png"
-            class="icons"
-            title="email icon"
-            alt="email icon"
-          />
-        </a>
-        <a href="https://www.behance.net/mkrajnikovics" target="_blank">
-          <img
-            src="images/behance.png"
-            class="icons"
-            title="behance icon"
-            alt="behance icon"
-          />
-        </a>
+        <div class="contact-box d-flex justify-content-between mb-5">
+          <div>
+            <h2>Go to my portfolio</h2>
+            <h3 class="text-muted">to check out my projects</h3>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-branding go-to-portfolio-homepage-button"
+              title="my projects"
+              >My projects</a
+            >
+          </div>
+        </div>
+        <div>
+          <div class="icons text-center">
+            <a href="https://www.instagram.com/rita__25/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://github.com/Ritulja" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
