--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <title>About Margareta Krajnikovics</title>
   </head>
   <body>
-    <div class="about-me-content">
+    <div class="about-me-content text-center">
       <nav class="navbar navbar-expand-lg bg-light fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
@@ -62,7 +62,7 @@
           </div>
         </div>
       </nav>
-      <div>
+      <div class="text-center">
         <h1>
           <img src="images/line3.png" class="line-right" alt="line" />
           <span>About me</span>
@@ -96,7 +96,7 @@
         </div>
       </div>
     </div>
-    <div class="about-me-contact">
+    <div class="about-me-contact text-center">
       <h2>Contact me</h2>
       <h3>
         <a
@@ -115,39 +115,37 @@
         >
       </div>
       <footer>
-        <a href="https://www.facebook.com/rita.krainicovich/" target="_blank">
-          <img
-            src="images/facebook-icon.png"
-            class="icons"
-            title="facebook icon"
-            alt="facebook icon"
-          />
-        </a>
-        <a href="https://www.instagram.com/rita__25/" target="_blank">
-          <img
-            src="images/instagram-icon.png"
-            class="icons"
-            title="instagram icon"
-            alt="instagram icon"
-          />
-        </a>
-        <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
-          <img
-            src="images/email-icon.png"
-            class="icons"
-            title="email icon"
-            alt="email icon"
-          />
-        </a>
-        <a href="https://www.behance.net/mkrajnikovics" target="_blank">
-          <img
-            src="images/behance.png"
-            class="icons"
-            title="behance icon"
-            alt="behance icon"
-          />
-        </a>
+        <div class="contact-box d-flex justify-content-between mb-5">
+          <div>
+            <h2>Go to my portfolio</h2>
+            <h3 class="text-muted">to check out my projects</h3>
+          </div>
+          <div>
+            <a
+              href="#"
+              class="btn btn-branding go-to-portfolio-homepage-button"
+              title="my projects"
+              >My projects</a
+            >
+          </div>
+        </div>
+        <div>
+          <div class="icons text-center">
+            <a href="https://www.instagram.com/rita__25/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://github.com/Ritulja" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
+        </div>
+        </div>
       </footer>
-    </div>
+    
   </body>
 </html>
