--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
       </div>
 
       <footer>
-        <div class="contact-box d-flex justify-content-between">
+        <div class="contact-box d-flex justify-content-between mb-5">
           <div>
             <h2>Go to my portfolio</h2>
             <h3 class="text-muted">to check out my projects</h3>
           </div>
           <div>
             <a
-              href="#"
+              href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
               title="my projects"
               >My projects</a
@@ -184,17 +184,15 @@
           </div>
         </div>
         <div>
-          <div class="icons">
+          <div class="icons text-center">
             <a href="https://www.instagram.com/rita__25/" target="_blank">
               <i class="fa-brands fa-instagram"></i>
             </a>
-          </div>
-          <div class="icons">
+
             <a href="https://github.com/Ritulja" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
-          </div>
-          <div class="icons">
+
             <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
               <i class="fa-solid fa-envelope"></i>
             </a>
