--- a/about.html
+++ b/about.html
@@ -30,45 +30,43 @@
     <title>About Margareta Krajnikovics</title>
   </head>
   <body>
-    <div class="about-me-content text-center">
-      <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
-              <a class="nav-link" href="about.html" target="_blank">About me</a>
-              <a class="nav-link" href="my-projects.html" target="_blank"
-                >My projects</a
-              >
-              <a class="nav-link" href="contact.html" target="_blank"
-                >Contact</a
-              >
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html"
+              >Home</a
+            >
+            <a class="nav-link" href="about.html" target="_blank">About me</a>
+            <a class="nav-link" href="my-projects.html" target="_blank"
+              >My projects</a
+            >
+            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
           </div>
         </div>
-      </nav>
-      <div class="text-center">
+      </div>
+    </nav>
+    <div class="about-me-content-main">
+      <div class="about-me-content text-center">
         <h1>
           <img src="images/line3.png" class="line-right" alt="line" />
           <span>About me</span>
           <img src="images/line3.png" class="line-left" alt="line" />
         </h1>
-        <div class="about-me-content container">
+        <div class="container">
           <div class="row">
             <div class="col-md-6">
               <h2 class="mb-4">Hi, I am Margareta Krajnikovics</h2>
@@ -95,24 +93,26 @@
           >
         </div>
       </div>
-    </div>
-    <div class="about-me-contact text-center">
-      <h2>Contact me</h2>
-      <h3>
-        <a
-          href="mailto:margareta.krajnikovics@gmail.com"
-          class="about-me-contact-email"
-        >
-          margareta.krajnikovics@gmail.com</a
-        >
-      </h3>
-      <div>
-        <a
-          href="#skills-contact"
-          class="btn btn-branding about-me-contact-button"
-          title="Contact me"
-          >Contact me</a
-        >
+      <div class="about-me-contact">
+        <div class="about-me-contact-container text-center">
+          <h2>Contact me</h2>
+          <h3>
+            <a
+              href="mailto:margareta.krajnikovics@gmail.com"
+              class="about-me-contact-email"
+            >
+              margareta.krajnikovics@gmail.com</a
+            >
+          </h3>
+          <div>
+            <a
+              href="#skills-contact"
+              class="btn btn-branding about-me-contact-button"
+              title="Contact me"
+              >Contact me</a
+            >
+          </div>
+        </div>
       </div>
       <footer>
         <div class="contact-box d-flex justify-content-between mb-5">
@@ -122,7 +122,7 @@
           </div>
           <div>
             <a
-              href="#"
+              href="my-projects.html"
               class="btn btn-branding go-to-portfolio-homepage-button"
               title="my projects"
               >My projects</a
@@ -144,8 +144,7 @@
             </a>
           </div>
         </div>
-        </div>
       </footer>
-    
+    </div>
   </body>
 </html>
