--- a/my-projects.html
+++ b/my-projects.html
@@ -30,39 +30,37 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="my-projects-homepage">
-      <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
-              <a class="nav-link" href="about.html" target="_blank">About me</a>
-              <a class="nav-link" href="my-projects.html" target="_blank"
-                >My projects</a
-              >
-              <a class="nav-link" href="contact.html" target="_blank"
-                >Contact</a
-              >
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html"
+              >Home</a
+            >
+            <a class="nav-link" href="about.html" target="_blank">About me</a>
+            <a class="nav-link" href="my-projects.html" target="_blank"
+              >My projects</a
+            >
+            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
           </div>
         </div>
-      </nav>
-      <div my-projects-content>
+      </div>
+    </nav>
+    <div class="my-projects-homepage">
+      <div class="my-projects-content">
         <h1 class="text-center mb-5">
           <img src="images/line3.png" class="line-right" alt="line" />
           <span>My Projects</span>
