--- a/contact.html
+++ b/contact.html
@@ -30,40 +30,37 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="contact-me-main-page">
-      <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Margareta Krajnikovics</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
-              <a class="nav-link" href="about.html" target="_blank">About me</a>
-              <a class="nav-link" href="my-projects.html" target="_blank"
-                >My projects</a
-              >
-              <a class="nav-link" href="contact.html" target="_blank"
-                >Contact</a
-              >
-            </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html"
+              >Home</a
+            >
+            <a class="nav-link" href="about.html" target="_blank">About me</a>
+            <a class="nav-link" href="my-projects.html" target="_blank"
+              >My projects</a
+            >
+            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
           </div>
         </div>
-      </nav>
-
-      <div>
+      </div>
+    </nav>
+    <div class="contact-me-main-page">
+      <div class="text-center">
         <h1 class="mb-5">
           <img src="images/line3.png" class="line-right" alt="line" />
           <span>Contact me</span>
@@ -74,39 +71,39 @@
             margareta.krajnikovics@gmail.com</a
           >
         </h3>
+      </div>
 
-        <footer>
-          <div class="contact-box d-flex justify-content-between mb-5">
-            <div>
-              <h2>Go to my portfolio</h2>
-              <h3 class="text-muted">to check out my projects</h3>
-            </div>
-            <div>
-              <a
-                href="#"
-                class="btn btn-branding go-to-portfolio-homepage-button"
-                title="my projects"
-                >My projects</a
-              >
-            </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5">
+          <div>
+            <h2>Go to my portfolio</h2>
+            <h3 class="text-muted">to check out my projects</h3>
           </div>
           <div>
-            <div class="icons text-center">
-              <a href="https://www.instagram.com/rita__25/" target="_blank">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-
-              <a href="https://github.com/Ritulja" target="_blank">
-                <i class="fa-brands fa-github"></i>
-              </a>
-
-              <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
-                <i class="fa-solid fa-envelope"></i>
-              </a>
-            </div>
+            <a
+              href="#"
+              class="btn btn-branding go-to-portfolio-homepage-button"
+              title="my projects"
+              >My projects</a
+            >
           </div>
-        </footer>
-      </div>
+        </div>
+        <div>
+          <div class="icons text-center">
+            <a href="https://www.instagram.com/rita__25/" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://github.com/Ritulja" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+
+            <a href="mailto:margareta.krajnikovics@gmail.com" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
